# arrowspace_tuner

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
notebooks/: phase1_objective_validity.ipynb  phase1_objective_validity_2.ipynb
results/cve_arrowspace_fstar/20260429_060712/: best_params.json  trials.csv
results/cve_arrowspace_fstar/20260429_130050/: best_params.json  trials.csv
scripts/: evaluate_retival_v3.py  query_embs.py  test_17_CVE_neurips_v2.py  test_eval.py  test_retrival.py
scripts/build_ground_truth/: inspect_parquet.py  stage_a_extract_cwe.py  stage_b_filter_corpus.py  stage_c_build_buckets.py  stage_d_sample_queries.py  test_2_CVE_db.py
src/arrowspace_tuner/: __init__.py  api.py  reporter.py  reporting.py  tuner.py
src/arrowspace_tuner/core/: __init__.py  config.py  graph.py  objective.py
src/arrowspace_tuner/reporting/: __init__.py  reporter.py
tests/: conftest.py  test_objective.py  test_tuner.py
